[package]
name = "multi-task-pwsh"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "6.0.0"
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread", "net", "process", "io-util", "rt"]}
axum = {version = "0.8.4", features = ["tokio", "macros", "http2"]}
reqwest = "0.12.20"
